nodeapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: H:\INFO905\INFO910-docker\kompose-windows-amd64.exe convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: nodeapp
  name: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodeapp
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: H:\INFO905\INFO910-docker\kompose-windows-amd64.exe convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/default: "true"
        io.kompose.service: nodeapp
    spec:
      containers:
        - image: thepalsor/node-app:latest
          name: nodeapp
          ports:
            - containerPort: 5000
          resources: {}
      restartPolicy: Always
status: {}
