db-service.yaml
apiVersion: v1
kind: Service
spec:
  ports:
    - name: "5433"
      port: 5433
      targetPort: 5432
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
