nodeapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp
spec:
  selector:
    app: nodeapp
  type: LoadBalancer 
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 31000
